--- a/README.org
+++ b/README.org
@@ -19,7 +19,8 @@ zip exploit.zip evil.php
   #+END_SRC
 
 * Introduction
-  This Python script is developed for educational purposes as part of an university lecture series on cybersecurity and ethical hacking. It provides a practical demonstration of how to automate the process of exploiting a known remote code execution vulnerability in =Pluck CMS version 4.7.18=.
+This Python script is developed for educational purposes as part of an university lecture series on cybersecurity and ethical hacking. It provides a practical demonstration of how to automate the process of exploiting a known remote code execution vulnerability in =Pluck CMS version 4.7.18= and is an modified version of the original [[https://www.exploit-db.com/exploits/51592][exploit from exploit-db]].
+
 
 * Dependencies
   This script requires =Python3= and the following additional modules:
